--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "chart.js": "^4.4.3",
+    "convertapi-js": "^1.0.8",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
